# sglang

./: .gitmodules  bench_rmsnorm_kernels.py  comprehensive_allreduce_benchmark.py  run_client.sh  test_triton_correctness_with_symm_mem.py
sgl-kernel/: CMakeLists_rocm.txt  build_rocm.sh  pyproject.toml  rename_wheels_rocm.sh  rocm_hipify.py  setup.py  setup_rocm.py
sgl-kernel/csrc/: common_extension_rocm.cc  torch_extension_rocm.cc
sgl-kernel/csrc/allreduce/: hip_trtllm_allreduce.cu
sgl-kernel/csrc/elementwise/: concat_mla.cu  fused_add_rms_norm_kernel.cu  hip_fused_add_rms_norm_kernel.cu  hip_rope.cu  layernorm_kernels.cu  rope.cu  utils.cuh
sgl-kernel/csrc/kvcacheio/: transfer.cu
sgl-kernel/csrc/speculative/: eagle_utils.cu
sgl-kernel/include/: gpu_defines_cuda_hip.h  hip_exception.h  hip_math_def.h  hip_norm.cuh  hip_pos_enc.cuh  hip_vec_dtypes.h  math.cuh  norm.cuh  pos_enc.cuh  pytorch_extension_utils_rocm.h  sgl_kernel_ops.h  utils.h
sgl-kernel/include/hip/: attention_generic.cuh  dispatch_utils.h  dtype_bfloat16.cuh  dtype_float16.cuh  dtype_float32.cuh  dtype_fp8.cuh  gpu_defines_cuda_hip.h  hip_layout.cuh  hip_math_def.h  hip_norm.cuh  hip_pos_enc.cuh  hip_vec_dtypes.h  math.cuh  quant_utils.cuh  trtllm_allreduce.cuh  type_convert.cuh
sgl-kernel/include/hip/impl/: hip_vec_bf16_impl.h  hip_vec_half_impl.h
sgl-kernel/include/impl/: hip_vec_fp32_impl.h
sgl-kernel/python/sgl_kernel/: __init__.py  elementwise.py
sgl-kernel/src/sgl-kernel-amd/: __init__.py
sgl-kernel/src/sgl-kernel-amd/csrc/: utils.hpp  (+1 more)
sgl-kernel/tests/: test_ck_gemm.py
(+122 files in other folders)
