[build-system]
requires = ["setuptools>=61.0", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "sgl-kernel"
version = "0.0.2.post14"
description = "Kernel Library for SGLang"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: GPU :: NVIDIA CUDA"
]
dependencies = [
  "torch",
]

[project.urls]
"Homepage" = "https://github.com/sgl-project/sglang"
"Bug Tracker" = "https://github.com/sgl-project/sglang/issues"


[tool.wheel]
exclude = [
  "dist*",
  "tests*",
]
